# holding

./: .gitignore  Cargo.toml  license-apache.txt  license-mit.txt  readme.md  world.yaml
holding_color/: Cargo.toml  readme.md
holding_color/src/: lib.rs
holding_kronos/: Cargo.toml  Makefile.toml  readme.md
holding_kronos/proptest-regressions/calendar/: test.txt
holding_kronos/proptest-regressions/datetime/: date.txt  datetime.txt
holding_kronos/src/: lib.rs  util.rs
holding_kronos/src/calendar/: calendar.rs  day.rs  era.rs  mod.rs  test.rs  traits.rs  week.rs  year.rs
holding_kronos/src/datetime/: date.rs  datetime.rs  mod.rs  test.rs  time.rs  time_of_day.rs  traits.rs
holding_solar/: Cargo.toml  readme.md
holding_solar/src/: lib.rs  orbit.rs  planet.rs
src/: character.rs  main.rs  persistence.rs  record.rs  world.rs
src/opts/: bodies.rs  calendar.rs  characters.rs  completion.rs  dice.rs  history.rs  host.rs  locations.rs  mod.rs  new.rs  now.rs  record.rs  sound.rs  weather.rs
