cargo-features = ["edition2021"]

[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
categories = ["command-line-utilities", "games", "date-and-time"]
description = "Commandline toolkit for immersive DnD"
edition = "2021"
homepage = "https://crates.io/crates/holding"
keywords = ["dnd", "dungeons-and-dragons", "dice", "calendar"]
license = "MIT OR Apache-2.0"
name = "holding"
readme = "readme.md"
repository = "https://github.com/arlyon/holding"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
clap_generate = "3.0.0-beta.1"
dnd_dice_roller = "0.4"
holding_color = {path = "holding_color", version = "0.1"}
holding_kronos = {path = "holding_kronos", version = "0.2", features = ["serde"]}
holding_solar = {path = "holding_solar", version = "0.1"}
human-panic = "1.0"
itertools = "0.10"
lazy_static = "1.4.0"
ordinal = "0.2"
regex = "1.3.9"
rspotify = {git = "https://github.com/ramsayleung/rspotify.git", branch = "master", features = ["client-ureq", "ureq-rustls-tls"], default_features = false, optional = true}
serde = "1.0"
serde_yaml = "0.8"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
url = "2.2.2"
uuid = "0.8"

[dev-dependencies]
proptest = "1.0.0"
test-case = "1.0.0"

[features]
default = []
sound = ["rspotify"]

[workspace]
members = [
  "holding_solar",
  "holding_kronos",
  "holding_color",
]
