[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "A flexible library for working with custom fantasy calendars"
documentation = "https://docs.rs/holding_kronos"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "holding_kronos"
readme = "readme.md"
repository = "https://github.com/arlyon/holding/tree/master/holding_kronos"
version = "0.1.0"

[dependencies]
lazy_static = "1.4"
num_enum = "0.5"
ordinal = "0.2"
regex = "1.3"
serde = {version = "1.0", features = ["derive"]}
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"

[dev-dependencies]
proptest = "0.10"
test-case = "1.0.0"
