[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "A flexible library for working with custom fantasy calendars."
documentation = "https://docs.rs/holding_kronos"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "holding_kronos"
readme = "readme.md"
repository = "https://github.com/arlyon/holding/tree/master/holding_kronos"
version = "0.2.0"

[dependencies]
lazy_static = {version = "1.4", optional = true}
num_enum = "0.5"
regex = {version = "1.3", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
strum = {version = "0.19", features = ["derive"]}
thiserror = "1.0"

[dev-dependencies]
proptest = "0.10"
test-case = "1.0.0"

[features]
default = ["parse"]
parse = ["regex", "lazy_static"]
